--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "vitest --run && yarn build && playwright test",
+    "test": "yarn test:unit && yarn test:integration",
+    "test:unit": "vitest --run",
+    "test:integration": "yarn build && playwright test",
     "typecheck": "tsc",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
