--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pre-commit": "yarn format:check && yarn typecheck && yarn lint && yarn build && yarn test"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@tanstack/react-query": "^5.45.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -37,6 +38,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.1.0",
+    "monaco-editor": "^0.50.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
