--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@tanstack/react-query": "^5.45.1",
+    "json5": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
