--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@tanstack/react-query": "^5.45.1",
     "json5": "^2.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.44.1",
