--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: "./dist"
+          path: "./dist/tailwind-to-css/"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
